--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,6 +60,8 @@
         "xlocbuf": "cpp",
         "xlocmes": "cpp",
         "xlocmon": "cpp",
-        "xloctime": "cpp"
+        "xloctime": "cpp",
+        "random": "cpp",
+        "fstream": "cpp"
     }
 }
